--- a/Route_Generator/templates/Route_Generator/reparto.html
+++ b/Route_Generator/templates/Route_Generator/reparto.html
@@ -126,7 +126,7 @@
 
 {% if mensaje_error %}
 <div class="fixed inset-0 flex items-center justify-center bg-gray-900 bg-opacity-50 z-50">
-    <div class="bg-white rounded-lg shadow-lg max-w-md w-full p-6">
+    <div class="bg-white rounded-lg shadow-lg max-w-xl w-full p-6">
         <h2 class="text-lg font-bold text-red-600 mb-4">Error</h2>
         <p class="text-gray-700 mb-4">{{ mensaje_error }}</p>
 
@@ -156,7 +156,6 @@
         {% else %}
         <p class="text-gray-700">No hay datos disponibles.</p>
         {% endif %}
-
         <div class="mt-4 flex justify-end">
             <button onclick="closeError()" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-md">
                 Cerrar
